Fix badge alignment in React selects
MAILPOET-4057

--- a/mailpoet/assets/css/src/generic/_forms-select.scss
+++ b/mailpoet/assets/css/src/generic/_forms-select.scss
@@ -135,7 +135,7 @@
 }
 
 .mailpoet-form-react-select-option > span {
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 .mailpoet-form-react-select-tag {
